<resources>
    <string name="app_name">Metronome</string>
    <string name="label_close_drawer">Close</string>
    <string name="label_open_drawer">Open</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_exit">Exit app</string>
    <string name="label_song_count" formatted="false">%d songs</string>
    <string name="label_album_song_count" formatted="false">%d albums  |  %d songs</string>
    <string name="permission_rationale_storage">We need storage permission to read your media library!</string>
    <string name="permission_rationale_dialog_title">Permission required</string>
    <string name="permission_manual_settings">To continue using the app please enable STORAGE permission in Settings.</string>
    <string name="drawer_my_music">My Music</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_changelog">Changelog</string>
    <string name="drawer_debug_options">DEVELOPER OPTIONS</string>
    <string name="desc_play_pause_button">Play or pause current song</string>
</resources>
