<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_library_local"
        android:icon="@drawable/ic_library_music"
        android:title="@string/drawer_my_music"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/drawer_settings"/>
    <item
        android:id="@+id/menu_changelog"
        android:icon="@drawable/ic_changelog"
        android:title="@string/drawer_changelog"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/drawer_about"/>
    <item
        android:id="@+id/menu_dev_options"
        android:icon="@drawable/ic_dev_options"
        android:title="@string/drawer_debug_options"/>
</menu>